--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,8 +121,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-image: url("/overlay.svg");
   background-size: cover;
   background-position: center;
@@ -132,7 +132,7 @@
 
 .custom-overlay > * {
   position: relative;
-  z-index: 1;
+  z-index: 0;
 }
 
 @layer base {
